--- a/curie-weiss-notation-main.tex
+++ b/curie-weiss-notation-main.tex
@@ -2,7 +2,7 @@
 
 \usepackage{amssymb}
 \usepackage{physics}
-%\usepackage{hyperref} % for hyperlinks in references
+\usepackage{hyperref} % for hyperlinks in references
 \usepackage[notref,notcite,color]{showkeyskay}\definecolor{labelkey}{rgb}{1,0,0.5}
 
 \usepackage{graphicx}
