--- a/curie-weiss-notation-main.tex
+++ b/curie-weiss-notation-main.tex
@@ -811,9 +811,9 @@
 	
 	
 	\section{\label{sec:app:entropy} Calculation of Entropy}
-	This Appendix contains explicit calculation of entropy from Eq.~\eqref{eq:entropy} by taking dirivatives of pressure with respect to temperature
+	This Appendix contains explicit calculation of entropy from Eq.~\eqref{eq:entropy} by taking derivatives of pressure with respect to temperature
 	\begin{equation}
-		S^{**} = \frac{1}{\rho^*} \left[E + T^* \left(\frac{\partial E}{\partial T^*}\right)_{\mu}\right];
+		S^{*} = \frac{1}{\rho^*} \left[E + T^* \left(\frac{\partial E}{\partial T^*}\right)_{\mu}\right];
 	\end{equation}
 	\begin{equation}
 		E = -\frac{1}{2}T^* \bar{y}^2 + \ln K.
