--- a/curie-weiss-notation-main.tex
+++ b/curie-weiss-notation-main.tex
@@ -560,7 +560,7 @@
 	\end{equation}
 	%This enables us to calculate the equation of state.
 	
-	
+	\pagebreak
 	\section{Entropy}
 	By thermodynamic formulas for the grand canonical ensemble
 	\begin{equation}
@@ -903,16 +903,14 @@
 	
 	\begin{figure}[htbp]
 		\includegraphics[width=0.45\textwidth,angle=0]{vdw_S_vs_mu}
-		\centering
-		%\hfill
-		%\includegraphics[width=0.45\textwidth,angle=0]{SS_vs_T2}
-		%\\
-		\captionsetup{width=0.45\textwidth}
-		%\parbox{0.45\textwidth}
-		{\caption{\label{fig:vdw_S_vs_mu} Entropy $S^{*}$ as a function of $\mu/(k_{\rm B}T_c)$ at a given temperature, (Dashed black line): $\hat{\tau}=0.5$, (Solid blue line): $\hat{\tau}=1.0$, (Dash-dotted green line): $\hat{\tau}=1.5$.}}
-		%\hfill
+		\hfill
+		\includegraphics[width=0.45\textwidth,angle=0]{vdw_S_vs_t_at_mu}
+		\\
 		%\captionsetup{width=0.5\textwidth}
-		%\parbox{0.45\textwidth}{\caption{\label{fig:S_vs_T2} Entropy $S^{**}(\bar{y},T^*,\mu^*)$ as a function of $T^*$ at $\mu^*=-1.0$ ($v^* = 5$)}}
+		\parbox{0.45\textwidth}{\caption{\label{fig:vdw_S_vs_mu} Entropy per particle $S^{*}$ of the vdW fluid as a function of chemical potential $\mu/(k_{\rm B}T_c)$ at a given temperature, (Dashed black line): $\hat{\tau}=0.5$, (Solid blue line): $\hat{\tau}=1.0$, (Dash-dotted green line): $\hat{\tau}=1.5$.}}
+		\hfill
+		%\captionsetup{width=0.5\textwidth}
+		\parbox{0.45\textwidth}{\caption{\label{fig:vdw_S_vs_t_at_mu} Entropy per particle $S^{*}$ of the vdW fluid as a function of temperature $\hat{\tau}$ at a given chemical potential $\mu/(k_{\rm B}T_c) = -6.0$.}}
 	\end{figure}
 
 	\pagebreak	
